fix: Refactor Password component layout and styling for better visibility and user interaction

--- a/front/src/pages/My_Profile/Settings_Page/Settings_Page.css
+++ b/front/src/pages/My_Profile/Settings_Page/Settings_Page.css
@@ -14,7 +14,7 @@
   flex-direction: column; 
 }
 
-div h1 {
+.wrapper .Set {
   font-family: "Alexandria", sans-serif;
   font-size: 60px;
   font-weight: 700;
@@ -130,14 +130,10 @@ div h1 {
 
 .text-container {
   font-family: "Alexandria", sans-serif;
-  position: relative;
-  font-size: 36px;
-  /* width: 90%; */
-}
-
-.text-container.TFA{
-  top:2rem;
-
+  font-size: 35px;
+  font-weight: 700;
+  text-align: justify;
+  margin-top: 30px;
 }
 
 
@@ -149,9 +145,10 @@ div h1 {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  gap: 10px;
   text-align: center;
   align-items: center;
-  top: 1rem;
+  top: 2rem;
   height: 30%;
   min-height: 25%;
   width: 89%;
@@ -159,90 +156,13 @@ div h1 {
 }
 
 
-/* Basic styling */
-
-input[type="checkbox"] {
-  width: 2rem;
-  height: 2rem;
-  color: green;
-  vertical-align: middle;
-  margin: 3px;
-  -webkit-appearance: none;
-  appearance: none;
-  background: none;
-  border: 0;
-  outline: 0;
-  flex-grow: 0;
-  border-radius: 50%;
-  background-color: #FFFFFF;
-  transition: background 180ms;
-  cursor: pointer;
-}
-
-
-/* Pseudo element for check styling */
-
-input[type="checkbox"]::before {
-  content: "";
-  color: transparent;
-  display: block;
-  width: inherit;
-  height: inherit;
-  border-radius: inherit;
-  background-color: green;
-  background-size: contain;
-  box-shadow: inset 0 0 0 1px #89db16;
-}
-
-
-/* Checked */
-
-input[type="checkbox"]:checked {
-  background-color: currentColor;
-}
-
-input[type="checkbox"]:checked::before {
-  box-shadow: none;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
-}
-
-
-/* Disabled */
-
-input[type="checkbox"]:disabled {
-  background-color: #CCD3D8;
-  opacity: 0.84;
-  cursor: not-allowed;
-}
-
-
-/* IE */
-
-input[type="checkbox"]::-ms-check {
-  /* content: ""; */
-  color: transparent;
-  display: block;
-  width: inherit;
-  height: inherit;
-  border-radius: inherit;
-  border: 0;
-  background-color: transparent;
-  background-size: contain;
-  box-shadow: inset 0 0 0 1px #CCD3D8;
-}
-
-input[type="checkbox"]:checked::-ms-check {
-  box-shadow: none;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24'%3E %3Cpath d='M15.88 8.29L10 14.17l-1.88-1.88a.996.996 0 1 0-1.41 1.41l2.59 2.59c.39.39 1.02.39 1.41 0L17.3 9.7a.996.996 0 0 0 0-1.41c-.39-.39-1.03-.39-1.42 0z' fill='%23fff'/%3E %3C/svg%3E");
-}
-
-
 .description
 {
+  display: flex;
+  flex-direction: column;
   position: relative;
   text-align: center;
-  margin: 2rem;
-  /* top: 1rem; */
+  margin-top: 1rem;
 }
 
 .check-TFA {
@@ -251,11 +171,6 @@ input[type="checkbox"]:checked::-ms-check {
   flex-direction: column;
   font-weight: 240;
   font-size: larger;
-}
-
-label {
-  padding-left: 20px;
-  padding-right: 20px;
 }
 
 .from-box.security {
@@ -302,7 +217,7 @@ label {
 .font-size {
   font-family: "Alexandria", sans-serif;
   font-size: 36px;
-  font-weight: 570;
+  font-weight: 600;
 }
 
 .spn {
@@ -377,7 +292,7 @@ label {
   color: #FFFFFF;
 }
 
-span {
+.params span {
   font-family: "Alexandria", sans-serif;
   display: flex;
   justify-content: space-between;
@@ -461,11 +376,6 @@ span {
   justify-content: center;
   align-items: center;
 
-}
-
-label.change-profile {
-  cursor: pointer;
-  font-weight: bolder;
 }
 
 input[type="file"] {
